--- a/index.html
+++ b/index.html
@@ -3,105 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LAZURD - شركة الوساطة المالية</title>
-  <style>
-    body {
-      font-family: Tahoma, Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f8f9fa;
-      color: #333;
-      scroll-behavior: smooth;
-    }
+  <title>LAZURD - الرئيسية</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
 
-    /* Header */
-    header {
-      background: #0f3057;
-      color: white;
-      padding: 20px;
-      text-align: center;
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      transition: background 0.3s;
-    }
+  <header>
+    <h1>LAZURD</h1>
+    <p>شركة الوساطة المالية الرائدة</p>
+  </header>
 
-    header h1 {
-      margin: 0;
-      font-size: 28px;
-      letter-spacing: 2px;
-    }
+  <nav>
+    <a href="index.html">الرئيسية</a>
+    <a href="services.html">الخدمات</a>
+    <a href="about.html">من نحن</a>
+    <a href="contact.html">تواصل معنا</a>
+  </nav>
 
-    /* Nav */
-    nav {
-      display: flex;
-      justify-content: center;
-      background: #00587a;
-      transition: background 0.3s;
-    }
+  <section class="section">
+    <h2>استثمر بثقة مع LAZURD</h2>
+    <p>نقدم لك حلول استثمارية آمنة واحترافية لتداول الذهب والعملات والأسهم.</p>
+  </section>
 
-    nav a {
-      color: white;
-      padding: 14px 20px;
-      text-decoration: none;
-      transition: background 0.3s, transform 0.2s;
-    }
+  <section class="section">
+    <h3>خدماتنا</h3>
+    <p>تداول آمن | منصات حديثة | دعم فني على مدار الساعة</p>
+  </section>
 
-    nav a:hover {
-      background: #008891;
-      transform: scale(1.1);
-    }
+  <footer>
+    <p>جميع الحقوق محفوظة © 2025 LAZURD</p>
+  </footer>
 
-    /* Hero Section */
-    .hero {
-      text-align: center;
-      padding: 80px 20px;
-      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1521791136064-7986c2920216') no-repeat center/cover;
-      color: white;
-      animation: fadeIn 2s ease-in;
-    }
+  <a href="https://wa.me/963933988214" class="whatsapp-float" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+  </a>
 
-    .hero h2 {
-      font-size: 36px;
-      margin-bottom: 20px;
-      animation: slideDown 1s ease-out;
-    }
-
-    .hero p {
-      font-size: 18px;
-      animation: slideUp 1s ease-out;
-    }
-
-    /* Sections */
-    .section {
-      padding: 60px 20px;
-      text-align: center;
-      animation: fadeIn 1.5s ease-in;
-    }
-
-    .section h3 {
-      font-size: 28px;
-      margin-bottom: 20px;
-      color: #0f3057;
-    }
-
-    /* Footer */
-    footer {
-      background: #0f3057;
-      color: white;
-      text-align: center;
-      padding: 25px;
-      margin-top: 40px;
-      position: relative;
-    }
-
-    .whatsapp-button {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 12px 25px;
-      text-decoration: none;
-      border-radius: 50px;
+</body>
+</html>      border-radius: 50px;
       font-weight: bold;
       transition: transform 0.2s, background 0.3s;
       background-color: #25D366;
