--- a/about.html
+++ b/about.html
@@ -6,34 +6,144 @@
   <title>LAZURD - من نحن</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    /* Hero */
+    .hero {
+      text-align: center;
+      padding: 80px 20px;
+      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
+                  url('https://images.unsplash.com/photo-1581093588401-3c5f80f1f1a2') no-repeat center/cover;
+      color: white;
+    }
+
+    .hero h2 {
+      font-size: 36px;
+      margin-bottom: 20px;
+      animation: slideDown 1s ease-out;
+    }
+
+    .hero p {
+      font-size: 18px;
+      animation: slideUp 1s ease-out;
+    }
+
+    /* Company Info */
+    .company-info {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 30px;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    .info-card {
+      background: white;
+      padding: 30px 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .info-card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+    }
+
+    .info-card i {
+      font-size: 40px;
+      color: #0f3057;
+      margin-bottom: 15px;
+    }
+
+    .info-card h3 {
+      font-size: 22px;
+      margin-bottom: 10px;
+      color: #0f3057;
+    }
+
+    .info-card p {
+      font-size: 16px;
+      color: #555;
+    }
+
+    /* Animations */
+    @keyframes slideDown {
+      from { opacity: 0; transform: translateY(-50px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes slideUp {
+      from { opacity: 0; transform: translateY(50px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
 <body>
 
-<header>
-  <h1>LAZURD</h1>
-  <p>شركة الوساطة المالية الرائدة</p>
-</header>
+  <header>
+    <h1>LAZURD</h1>
+    <p>شركة الوساطة المالية الرائدة</p>
+  </header>
 
-<nav>
-  <a href="index.html">الرئيسية</a>
-  <a href="services.html">الخدمات</a>
-  <a href="about.html">من نحن</a>
-  <a href="contact.html">تواصل معنا</a>
-</nav>
+  <nav>
+    <a href="index.html">الرئيسية</a>
+    <a href="services.html">الخدمات</a>
+    <a href="about.html">من نحن</a>
+    <a href="contact.html">تواصل معنا</a>
+  </nav>
 
-<section class="section">
-  <h2>من نحن</h2>
-  <p>شركة LAZURD متخصصة في الوساطة المالية منذ سنوات طويلة.</p>
-  <p>نهدف لتقديم أفضل الحلول الاستثمارية لعملائنا بثقة واحترافية.</p>
-</section>
+  <!-- Hero -->
+  <section class="hero">
+    <h2>عن شركة LAZURD</h2>
+    <p>نحن شركة وساطة مالية ملتزمة بتقديم حلول استثمارية مبتكرة وآمنة لعملائنا.</p>
+  </section>
 
-<footer>
-  <p>جميع الحقوق محفوظة © 2019 LAZURD</p>
-</footer>
+  <!-- Company Info -->
+  <section class="company-info">
+    <div class="info-card">
+      <i class="fas fa-bullseye"></i>
+      <h3>رؤيتنا</h3>
+      <p>أن نكون الخيار الأول للمستثمرين الباحثين عن تداول آمن واحترافي في الأسواق المالية.</p>
+    </div>
+    <div class="info-card">
+      <i class="fas fa-lightbulb"></i>
+      <h3>مهمتنا</h3>
+      <p>تقديم خدمات مالية مبتكرة، واستراتيجيات تداول متقدمة لدعم عملائنا في تحقيق أهدافهم الاستثمارية.</p>
+    </div>
+    <div class="info-card">
+      <i class="fas fa-handshake"></i>
+      <h3>قيمنا</h3>
+      <p>الشفافية، الثقة، الاحترافية، والالتزام بخدمة العملاء بأعلى جودة ممكنة.</p>
+    </div>
+  </section>
 
-<a href="https://wa.me/963933988214" class="whatsapp-float" target="_blank">
-  <i class="fab fa-whatsapp"></i>
-</a>
+  <!-- Optional Team Section -->
+  <section class="company-info">
+    <div class="info-card">
+      <i class="fas fa-user-tie"></i>
+      <h3>خبير التحليل المالي</h3>
+      <p>يقدم تحليلات دقيقة للأسواق لمساعدة العملاء على اتخاذ قرارات مستنيرة.</p>
+    </div>
+    <div class="info-card">
+      <i class="fas fa-user-tie"></i>
+      <h3>مدير العمليات</h3>
+      <p>يشرف على جميع العمليات لضمان أفضل تجربة تداول لعملائنا.</p>
+    </div>
+    <div class="info-card">
+      <i class="fas fa-user-tie"></i>
+      <h3>فريق الدعم الفني</h3>
+      <p>متواجد 24/7 للإجابة على استفسارات العملاء وحل أي مشكلة بسرعة وكفاءة.</p>
+    </div>
+  </section>
+
+  <footer>
+    <p>جميع الحقوق محفوظة © 2019 LAZURD</p>
+  </footer>
+
+  <!-- WhatsApp floating button -->
+  <a href="https://wa.me/963933988214" class="whatsapp-float" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+  </a>
 
 </body>
 </html>
