--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,8 @@
 <section class="contact-section">
   <h2>تواصل معنا</h2>
   <p>📞 الهاتف: 00963933988214</p>
+  <p>📞 الهاتف: 00905466437398</p>
+  <p>📞 الهاتف: 00905349122237</p>
   <p>📧 البريد الإلكتروني: lazurdtrading@gmail.com</p>
   <p>💬 أو تواصل معنا مباشرة عبر WhatsApp</p>
   <a href="https://wa.me/963933988214" target="_blank" class="button button-whatsapp">💬 تواصل عبر WhatsApp</a>
